--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,6 +61,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Registrarse"
+        style="@style/botonRegistro"
         app:layout_constraintStart_toStartOf="@id/guideline1"
         app:layout_constraintEnd_toEndOf="@id/guideline2"
         app:layout_constraintTop_toBottomOf="@id/boton1" />
